# obts-smqueue

./: CMakeLists.txt  README.md  smqueue.conf
CommonLibs/: CMakeLists.txt  Logger.cpp  Timeval.h  UnixSignal.cpp
GSM/: CMakeLists.txt  GSMCommon.cpp  GSMCommon.h  GSML3Message.h  GSMTransfer.cpp  GSMTransfer.h  l2address.cpp  l2address.h  l2control.cpp  l2control.h  l2frame.cpp  l2frame.h  l2header.cpp  l2header.h  l2length.cpp  l2length.h  l3frame.cpp  l3frame.h  z100timer.cpp  z100timer.h
Globals/: CMakeLists.txt  Globals.cpp
NodeManager/: CMakeLists.txt  NodeManager.cpp
SMS/: CMakeLists.txt
SR/: CMakeLists.txt  SubscriberRegistry.cpp  servershare.cpp  servershare.h
SR/apps/: sipauthserve.cpp
smqueue/: CMakeLists.txt  QueuedMsgHdrs.cpp  QueuedMsgHdrs.h  SmqMessageHandler.cpp  SmqMessageHandler.h  SmqReader.cpp  SmqReader.h  SmqTest.cpp  SmqTest.h  SmqWriter.cpp  SmqWriter.h  netsocket.cpp  netsocket.h  rawmessage.cpp  rawmessage.h  shortcodeparams.cpp  shortcodeparams.h  shortmsg.cpp  shortmsg.h  shortmsgpending.cpp  shortmsgpending.h  smcommands.cpp  smnet.cpp  smnet.h  smqacker.cpp  smqacker.h  smqmanager.cpp  smqmanager.h  smqrmq.cpp  smqrmq.h  smqthread.cpp  smqthread.h  smqthreadsafequeue.h  smqueue.cpp  smqueue.h  smsc.cpp  smsc.h
tests/: CMakeLists.txt  runtests.cpp  smrelaytest.cpp  smtest.cpp
